# Primes

./: CMakeLists.txt  LICENSE  Makefile  README.md
src/: exercicio.c  exercicio.h
